# C-CPP-Utils-Library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
I2C_LCD_Library/: I2C_Lcd.c  I2C_Lcd.h  I2C_Lcd.h.REMOTE
I2cLcdLibrary/I2cLcdLibrary/: .cproject  .mxproject  .project  I2cLcdLibrary.ioc
I2cLcdLibrary/I2cLcdLibrary/Core/Src/: gpio.c  main.c
TestProject/TestProject/: .cproject  .project  CMakeLists.txt  TestProject.ioc  stm32f4discovery.cfg
TestProject/TestProject/Core/Inc/: main.h
TestProject/TestProject/Core/Src/: gpio.c  main.c
